--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: 60px;
+    transition: opacity 0.5s;
 }
 
 #messageName {
@@ -71,6 +72,7 @@ body {
 #visual {
     width: 250px;
     height: 250px;
+    transition: transform 0.5s;
 }
 #visual img {
     max-width:100%;
@@ -79,6 +81,8 @@ body {
 -moz-box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
 box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
 }
+
+/* CONTROLS */
 #slideController {
     position: absolute;
     z-index: 2;
@@ -114,6 +118,23 @@ box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
     padding: 16px;
 }
 .attribution a { color: hsl(228, 45%, 44%); }
+/* ANIMATION */
+.rotateY90 {
+    transform: rotateY(90deg)
+}
+.rotateY180 {
+    transform: rotateY(180deg)
+}
+.rotateY0 {
+    transform: rotateY(0deg)
+}
+.fadeOut{
+    opacity: 0;
+}
+.fadeIn{
+    opacity: 1;
+}
+
 
 /* RESPONSIVE DESIGN DESKTOP */
 @media only screen and (min-width: 1200px){
