--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     flex-flow: column;
     justify-content: space-evenly;
+    align-items: center;
 
     background-color: #fff;
     background-image: url("./images/pattern-curve.svg");
@@ -33,13 +34,15 @@ body {
 
 /* MESSAGE */
 #message{
+    max-width: 630px;
     text-align: center;
     padding: 28px 32px 0 32px;
     background-image: url("./images/pattern-quotes.svg");
     background-repeat: no-repeat;
     background-position-x: center;
     background-size: 60px;
-    transition: opacity 0.5s;
+    transition: opacity 0.5s
+    
 }
 
 #messageName {
@@ -62,6 +65,7 @@ body {
     background-size: 325px 310px;
     background-repeat: no-repeat;
     background-position: center;
+    perspective: 1000px;
 
     display: flex;
     flex-flow: column;
@@ -73,6 +77,8 @@ body {
     width: 250px;
     height: 250px;
     transition: transform 0.5s;
+    transform-style: preserve-3d;
+    position: relative;
 }
 #visual img {
     max-width:100%;
@@ -81,6 +87,31 @@ body {
 -moz-box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
 box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
 }
+#visualImgFront, 
+#visualImgBack {
+    position: absolute;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+}
+#visualImgBack{
+    transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -transform: rotateY(180deg);
+}
+.flip{
+    transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    -transform: rotateY(180deg);
+}
+.unflip{
+    transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    -webkit-transform: rotateY(0deg);
+    -transform: rotateY(0deg);
+}
+
 
 /* CONTROLS */
 #slideController {
@@ -118,16 +149,9 @@ box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
     padding: 16px;
 }
 .attribution a { color: hsl(228, 45%, 44%); }
+
 /* ANIMATION */
-.rotateY90 {
-    transform: rotateY(90deg)
-}
-.rotateY180 {
-    transform: rotateY(180deg)
-}
-.rotateY0 {
-    transform: rotateY(0deg)
-}
+
 .fadeOut{
     opacity: 0;
 }
