--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
 #visualContainer {
     position: relative;
     min-height: 310px;
+    min-width: 325px;
     background-image: url("./images/pattern-bg.svg");
     background-size: 325px 310px;
     background-repeat: no-repeat;
@@ -174,7 +175,7 @@ box-shadow: 0px 16px 50px 5px rgba(128,128,147,0.5);
     }
     #messageContainer{
         position: absolute;
-        left: 140px;
+        left: 150px;
     }
     #message{
         padding:0;
